# shinobi_alarm_server

./: .gitmodules  CMakeLists.txt  readme.md
clients/hikvision_cam/client/: CMakeLists.txt
clients/hikvision_cam/client/src/: Alarm.cpp  Alarm.h  main.cpp  public.h
clients/hikvision_cam/hikvision_alarm/: CMakeLists.txt
clients/hikvision_cam/hikvision_alarm/src/: main.cpp
clients/hikvision_cam/proxy/: CMakeLists.txt  readme.md
clients/hikvision_cam/proxy/src/: ActivityWatcher.cpp  ActivityWatcher.hpp  Args.cpp  Args.hpp  ClientConnection.cpp  ClientConnection.hpp  HikConnection.cpp  HikConnection.hpp  IClosable.hpp  Server.cpp  Server.hpp  StolenConnection.cpp  StolenConnection.hpp  main.cpp
clients/notSofia/: CMakeLists.txt
clients/notSofia/src/: Args.cpp  Args.hpp  ClientConnection.cpp  ClientConnection.hpp  main.cpp
scripts/: config.txt  shinobi_alarm_server.service
services/: hikvision_alarm.service  new_hikvision_alarm.service  notSofiaAlarmClient.service  shinobi_alarm_server.service
src/: Application.cpp  Application.h  MessageQueue.cpp  MessageQueue.h  MotionReceiver.cpp  MotionReceiver.h  MotionState.cpp  MotionState.h  main.cpp
src/Config/: CameraConfig.cpp  CameraConfig.hpp  ShinobiConfig.cpp  ShinobiConfig.hpp
